tests/agl/rejections/parse/for_collection_by_step.agl
for x in [1, 2, 3] by 2 do
  ()
done
